--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A blog preview card for understanding HTML and CSS basics."
+    />
+    <meta name="keywords" content="HTML, CSS, blog, web development" />
     <!-- displays site properly based on user's device -->
 
     <link
@@ -29,17 +34,17 @@
     <div class="container">
       <img
         src="./assets/images/illustration-article.svg"
-        alt=""
+        alt="Article illustration"
         class="blog-image"
       />
       <div class="content">
-        <span class="category">Learning</span>
-        <span class="date">Published 21 Dec 2023</span>
-        <span class="title">HTML & CSS foundations</span>
-        <span class="description">
+        <p class="category">Learning</p>
+        <p class="date">Published 21 Dec 2023</p>
+        <p class="title">HTML & CSS foundations</p>
+        <p class="description">
           These languages are the backbone of every website, defining structure,
           content, and presentation.
-        </span>
+        </p>
       </div>
 
       <div class="author">
@@ -48,7 +53,7 @@
           alt=""
           class="author-img"
         />
-        <span class="author-name">Greg Hooper</span>
+        <p class="author-name">Greg Hooper</p>
       </div>
     </div>
   </body>
