--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -35,8 +35,7 @@
       <p class="bio">"Front-end developer and avid reader."</p>
       <div class="links">
         <button>GitHub</button>
-        <button>Frontend</button>
-        <button>Mentor</button>
+        <button>Frontend Mentor</button>
         <button>LinkedIn</button>
         <button>Twitter</button>
         <button>Instagram</button>
